fix: Align the icon with the text

--- a/tour/tour.css
+++ b/tour/tour.css
@@ -16,7 +16,7 @@
 
 i {
 	font-size: 1.25em !important;
-	vertical-align: middle;
+	vertical-align: text-top;
 }
 
 /* showmore arrow */
